@@ -103,6 +103,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   and add a comment to the ini control file explaining what is going on.
 * Trying to upload a file with no extension or with a disallowed MIME type now gives
   the right message instead of complaining about a MIME/extension mismatch
+* (bug 26809) Uploading files with multiple extensions where one of the extensions
+  is blacklisted now gives the proper extension in the error message.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
